# sqlcore

./: .gitignore  CMakeLists.txt  LICENSE
include/sqlcore/: api.hpp  database.hpp  factory.hpp  logger.hpp  plugin.hpp  query.hpp  types.hpp  unknown.hpp
include/sqlcore/sdk/: compiler.hpp  dl.hpp  plugin.hpp  system.hpp
plugins/: CMakeLists.txt
plugins/mysql/: CMakeLists.txt  database.cpp  database.hpp  plugin.cpp  plugin.hpp  query.cpp  query.hpp
plugins/postgresql/: CMakeLists.txt  database.cpp  database.hpp  plugin.cpp  plugin.hpp  query.cpp  query.hpp
plugins/sqlite3/: CMakeLists.txt  database.cpp  database.hpp  plugin.cpp  plugin.hpp  query.cpp  query.hpp
src/: CMakeLists.txt
src/dl/: CMakeLists.txt  loader.cpp  loader.hpp
src/factory/: CMakeLists.txt  dl_loader.cpp  dl_main.cpp  multi_thread.cpp  multi_thread.hpp  single_thread.cpp  single_thread.hpp
src/logger/: CMakeLists.txt  dl_loader.cpp  logger.cpp  logger.hpp
